syntax="proto3";
package pb;  // 生成的go文件所属包名
option go_package="/internal/service;service";

message PipelineToDNArgs {
  uint32 Id = 1;
}

message PipelineToDNReply {
  uint32 ACK = 1;   //1 ok ;0 err
  string Err = 2;
}

service PipelineToDNService {
  rpc PipelineToDN(PipelineToDNArgs) returns(PipelineToDNReply);
}
